@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
-Date: 7-9-2025
+Date: 7-10-2025
+  Additions:
+    - Steam pumps are now created with enough steam to jump-start fluid flow in remote bases—initial amount increases with quality.
   Changes:
     - Foundry molten metal from ores slag output probability 100 -> 33%.
+    - Lignumis compatibility updated, start should now be possible.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 7-9-2025
